# wh-wall

./: .gitignore  PKGBUILD  README.md  cc.wallhaven.wh-wall.desktop  meson.build
src/: api.c  api.h  config.c  config.h  log.h  main.c  wallpaper.c  wallpaper.h  window.c  window.h
